--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^6.11.1",
     "mongoose-delete": "^0.5.4",
